Industry CCS sectors: add co2 capture electricity demand nodes

--- a/config/node_positions.yml
+++ b/config/node_positions.yml
@@ -1334,6 +1334,9 @@ industry_chemicals_fertilizers_burner_network_gas:
 industry_chemicals_fertilizers_burner_wood_pellets:
   x: 1140
   y: 11460
+industry_chemicals_fertilizers_captured_co2_electricity:
+  x: 720
+  y: 11220
 industry_chemicals_fertilizers_flue_gasses_potential_residual_heat:
   x: 460
   y: 11620
@@ -1376,6 +1379,9 @@ industry_chemicals_other_burner_network_gas:
 industry_chemicals_other_burner_wood_pellets:
   x: 1180
   y: 12300
+industry_chemicals_other_captured_co2_electricity:
+  x: 720
+  y: 11980
 industry_chemicals_other_flexibility_p2h_hydrogen_electricity:
   x: 1180
   y: 12600
@@ -1430,6 +1436,9 @@ industry_chemicals_refineries_burner_network_gas:
 industry_chemicals_refineries_burner_wood_pellets:
   x: 1240
   y: 10620
+industry_chemicals_refineries_captured_co2_electricity:
+  x: 720
+  y: 10380
 industry_chemicals_refineries_flexibility_p2h_hydrogen_electricity:
   x: 1240
   y: 10920
